Remove compilerArgs from maven-compiler-plugin
Removed compilerArgs configuration for preview features.